[package]
name = "pingora-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
env_logger = "0.11.3"
http = "1.1.0"
log = "0.4.21"
pingora = { version = "0.1.0", features = ["lb"] }
