[package]
name = "pingora-gateway"
version = "0.1.3"
authors = ["Richard Hao <richard@0xdev.dev>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
env_logger = "0.11.3"
http = "1.1.0"
jemallocator = "0.5.4"
log = "0.4.22"
pingora = { version = "0.2.0", features = ["proxy"] }
serde = { version = "1.0.203", features = ["derive"] }
structopt = "0.3.26"
toml = "0.8.14"

[dev-dependencies]
tempdir = "0.3.7"

[profile.release]
lto = true
codegen-units = 1
